<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1F2EB"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.lihat_lihat.balok.MainActivity">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="153dp"
        android:layout_gravity="center"
        android:src="@drawable/balok" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/luas_permukaan_balok"
        android:textColor="#2E86C1"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/panjang"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/input_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_panjang" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/lebar"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/input_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_lebar" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/tinggi"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/input_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_tinggi" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/permukaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hitung"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_luas"
        android:layout_gravity="center"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="40dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dibuat_oleh"
            android:id="@+id/button"
            android:onClick="button"
            android:gravity="center"/>

    </RelativeLayout>


</LinearLayout>
